# rumdl

./: CHANGELOG.md  Cargo.toml  README.md
.config/: nextest.toml
docs/: md052.md
src/: config.rs  file_processor.rs  inline_config.rs  lib.rs  lint_context.rs  main.rs  workspace_index.rs
src/rules/: md063_duplicate_footnotes.rs  md064_long_paragraph_footnotes.rs  md901_duplicate_footnotes.rs  md902_long_paragraph_footnotes.rs  mod.rs
src/utils/: text_reflow.rs
tests/: config_path_resolution_test.rs  config_tests.rs  cross_file_validation_test.rs  perf_regression_issue_148.rs  schema_validation_test.rs
tests/rules/: emphasis_edge_cases_test.rs  md003_test.rs  md037_test.rs  md051_comprehensive_test.rs  md051_test.rs  md057_test.rs
